tests/expression/set_mismatch_types.sy
start :: fn do
    a: {int} = {1, "abc", 1.0}
    a
end
// error: $Mismatch { .. }
